@@ -1,3 +1,7 @@
+2009-05-07  Murray Cumming  <murrayc@murrayc.com>
+
+	* libxml++/parsers/textreader.cc: Whitespace corrections.
+
 2009-03-25  Hubert Figuiere  <hub@figuiere.net>
 
 	* libxml++/parsers/saxparser.h: Fix some warnings triggered
